--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Patrix, Bootstrap 5 Landing Page</title>
+  <title>Dinesh - Software Developer - Workday Extend | Specialized in HR & Finance Tech Solutions |Custom Solutions Expert | Immediate Joiner</title>
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/fontawesome.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
@@ -52,42 +52,42 @@
 /////////////////////////////////////////////////////////////////////////////////////////////////////-->
 
   <section id="home" class="intro-section">
-    <div class="container">
-      <div class="row align-items-center text-white">
-        <!-- START THE CONTENT FOR THE INTRO  -->
-        <div class="col-md-6 intros text-start">
-          <h1 class="display-2">
-            <span class="display-2--intro">Hey!, I'm Patrick</span>
-            <span class="display-2--description lh-base">
-              this is a multi-purpose responsive layout created with bootstrap v5.
-              (here your can place your description text)
+  <div class="container">
+    <div class="row align-items-center text-white">
+      <!-- START THE CONTENT FOR THE INTRO  -->
+      <div class="col-md-6 intros text-start">
+        <h1 class="display-2">
+          <span class="display-2--intro">Hey!, I'm Dinesh</span>
+          <span class="display-2--description lh-base">
+            I'm a Workday Extend Application Developer specialized in HR and Finance Tech Solutions. With experience building scalable, user-centric apps, I'm passionate about transforming business processes through innovation and clean code.
+          </span>
+        </h1>
+        <button type="button" class="rounded-pill btn-rounded">Get in Touch
+          <span><i class="fas fa-arrow-right"></i></span>
+        </button>
+      </div>
+      <!-- START THE CONTENT FOR THE VIDEO -->
+      <div class="col-md-6 intros text-end">
+        <div class="video-box">
+          <img src="images/arts/intro-section-illustration.png" alt="video illutration" class="img-fluid">
+          <a href="#" class="glightbox position-absolute top-50 start-50 translate-middle">
+            <span>
+              <i class="fas fa-play-circle"></i>
             </span>
-          </h1>
-          <button type="button" class="rounded-pill btn-rounded">Get in Touch
-            <span><i class="fas fa-arrow-right"></i></span>
-          </button>
-        </div>
-        <!-- START THE CONTENT FOR THE VIDEO -->
-        <div class="col-md-6 intros text-end">
-          <div class="video-box">
-            <img src="images/arts/intro-section-illustration.png" alt="video illutration" class="img-fluid">
-            <a href="#" class="glightbox position-absolute top-50 start-50 translate-middle">
-              <span>
-                <i class="fas fa-play-circle"></i>
-              </span>
-              <span class="border-animation border-animation--border-1"></span>
-              <span class="border-animation border-animation--border-2"></span>
-            </a>
-          </div>
+            <span class="border-animation border-animation--border-1"></span>
+            <span class="border-animation border-animation--border-2"></span>
+          </a>
         </div>
       </div>
     </div>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-      <path fill="#ffffff" fill-opacity="1"
-        d="M0,160L48,176C96,192,192,224,288,208C384,192,480,128,576,133.3C672,139,768,213,864,202.7C960,192,1056,96,1152,74.7C1248,53,1344,107,1392,133.3L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
-      </path>
-    </svg>
-  </section>
+  </div>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+    <path fill="#ffffff" fill-opacity="1"
+      d="M0,160L48,176C96,192,192,224,288,208C384,192,480,128,576,133.3C672,139,768,213,864,202.7C960,192,1056,96,1152,74.7C1248,53,1344,107,1392,133.3L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+    </path>
+  </svg>
+</section>
+
 
   <!-- //////////////////////////////////////////////////////////////////////////////////////////////
                              START SECTION 3 - THE CAMPANIES SECTION  
