--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
         <!-- START THE CONTENT FOR THE INTRO  -->
         <div class="col-md-6 intros text-start">
           <h1 class="display-2">
-            <span class="display-2--intro">Yo! I’m Dinesh — Crafting clean code and smart apps.</span>
+            <span class="display-2--intro">Yo! I’m Dinesh</span>
             <span class="display-2--description lh-base">
               <b><div class="changing-text" id="text">   
               </div> </b>
-              Skilled in React, HTML, CSS, Java, PHP APIs — Delivering seamless UI/UX and smart integrations.
+              Skilled in React, HTML, CSS, Java, PHP APIs.<br>Delivering seamless UI/UX and smart integrations.<br>Crafting clean code and smart apps.
             </span>
           </h1>
           <button type="button" class="rounded-pill btn-rounded">Get in Touch
@@ -70,7 +70,7 @@
           </button>
         </div>
         <script>
-          const texts = ["HR & Finance App Developer | Workday Extend & Zoho Expert", "Custom Application Developer for HR & Finance Platforms", "UI/UX Specialist & API Developer | HTML, CSS, React, Java, PHP"];
+          const texts = ["HR & Finance App Developer | Workday Extend & Zoho Creator", "Custom Application Developer for HR & Finance Platforms", "UI/UX Specialist & API Developer | HTML, CSS, React, Java, PHP"];
           let index = 0;
           const textElement = document.getElementById("text");
 
