--- a/index.html
+++ b/index.html
@@ -58,11 +58,18 @@
         <!-- START THE CONTENT FOR THE INTRO  -->
         <div class="col-md-6 intros text-start">
           <h1 class="display-2">
-            <span class="display-2--intro">Yo! I’m Dinesh</span>
+            <span class="display-2--intro">Crafting clean code and smart apps</span>
             <span class="display-2--description lh-base">
+              <h3>Dinesh M</h3>
               <b><div class="changing-text" id="text">   
-              </div> </b>
-              Skilled in React, HTML, CSS, Java, PHP APIs.<br>Delivering seamless UI/UX and smart integrations.<br>Crafting clean code and smart apps.
+              </div> 
+            <ul class="cta-info__list">
+              <li>Skilled in React, HTML, CSS, Java, PHP APIs.</li>
+              <li>Delivering seamless UI/UX and smart integrations.</li>
+              <li>let's start the discussion.</li>
+            </ul>
+            </b>
+              <br>
             </span>
           </h1>
           <button type="button" class="rounded-pill btn-rounded">Get in Touch
