--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <ul class="cta-info__list">
               <li>Skilled in React, HTML, CSS, Java, PHP APIs.</li>
               <li>Delivering seamless UI/UX and smart integrations.</li>
-              <li>let's start the discussion.</li>
+              <li>Let's start the discussion.</li>
             </ul>
             </b>
               <br>
