--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               </div> 
             <ul class="cta-info__list">
               <li>Skilled in React, HTML, CSS, Java, PHP APIs.</li>
-              <li>Delivering seamless UI/UX and smart integrations.</li>
+              <li>Seamless UI/UX and smart integrations.</li>
               <li>Let's start the discussion.</li>
             </ul>
             </b>
