--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <!-- START THE CONTENT FOR THE INTRO  -->
         <div class="col-md-6 intros text-start">
           <h1 class="display-2">
-            <span class="display-2--intro">Crafting clean code and smart apps</span>
+            <span class="display-2--intro">Crafting clean code</span>
             <span class="display-2--description lh-base">
               <h3>Dinesh M</h3>
               <b><div class="changing-text" id="text">   
@@ -125,7 +125,7 @@
   <section id="campanies" class="campanies">
     <div class="container">
       <div class="row text-center">
-        <h4 class="fw-bold lead mb-3">Trusted by campanies like</h4>
+        <h4 class="fw-bold lead mb-3">Skills and Tools</h4>
         <div class="heading-line mb-5"></div>
       </div>
     </div>
@@ -134,32 +134,47 @@
       <div class="row">
         <div class="col-md-4 col-lg-2">
           <div class="campanies__logo-box shadow-sm">
-            <img src="images/campanies/campany-1.png" alt="Campany 1 logo" title="Campany 1 Logo" class="img-fluid">
+            <img src="images/campanies/1.png" alt="Campany 1 logo" title="Campany 1 Logo" class="img-fluid">
           </div>
         </div>
         <div class="col-md-4 col-lg-2">
           <div class="campanies__logo-box shadow-sm">
-            <img src="images/campanies/campany-2.png" alt="Campany 2 logo" title="Campany 2 Logo" class="img-fluid">
+            <img src="images/campanies/2.png" alt="Campany 2 logo" title="Campany 2 Logo" class="img-fluid">
           </div>
         </div>
         <div class="col-md-4 col-lg-2">
           <div class="campanies__logo-box shadow-sm">
-            <img src="images/campanies/campany-3.png" alt="Campany 3 logo" title="Campany 3 Logo" class="img-fluid">
+            <img src="images/campanies/3.png" alt="Campany 3 logo" title="Campany 3 Logo" class="img-fluid">
           </div>
         </div>
         <div class="col-md-4 col-lg-2">
           <div class="campanies__logo-box shadow-sm">
-            <img src="images/campanies/campany-4.png" alt="Campany 4 logo" title="Campany 4 Logo" class="img-fluid">
+            <img src="images/campanies/4.png" alt="Campany 4 logo" title="Campany 4 Logo" class="img-fluid">
           </div>
         </div>
         <div class="col-md-4 col-lg-2">
           <div class="campanies__logo-box shadow-sm">
-            <img src="images/campanies/campany-5.png" alt="Campany 5 logo" title="Campany 5 Logo" class="img-fluid">
+            <img src="images/campanies/5.png" alt="Campany 5 logo" title="Campany 5 Logo" class="img-fluid">
           </div>
         </div>
         <div class="col-md-4 col-lg-2">
           <div class="campanies__logo-box shadow-sm">
-            <img src="images/campanies/campany-6.png" alt="Campany 6 logo" title="Campany 6 Logo" class="img-fluid">
+            <img src="images/campanies/6.png" alt="Campany 6 logo" title="Campany 6 Logo" class="img-fluid">
+          </div>
+        </div>
+        <div class="col-md-4 col-lg-2">
+          <div class="campanies__logo-box shadow-sm">
+            <img src="images/campanies/7.png" alt="Campany 6 logo" title="Campany 6 Logo" class="img-fluid">
+          </div>
+        </div>
+        <div class="col-md-4 col-lg-2">
+          <div class="campanies__logo-box shadow-sm">
+            <img src="images/campanies/8.png" alt="Campany 6 logo" title="Campany 6 Logo" class="img-fluid">
+          </div>
+        </div>
+        <div class="col-md-4 col-lg-2">
+          <div class="campanies__logo-box shadow-sm">
+            <img src="images/campanies/9.png" alt="Campany 6 logo" title="Campany 6 Logo" class="img-fluid">
           </div>
         </div>
       </div>
