--- a/index.html
+++ b/index.html
@@ -60,24 +60,19 @@
           <h1 class="display-2">
             <span class="display-2--intro">Crafting clean code</span>
             <span class="display-2--description lh-base">
-              <h3>Dinesh M</h3>
+              <h2>Dinesh M</h2>
               <b><div class="changing-text" id="text">   
               </div> 
-            <ul class="cta-info__list">
-              <li>Skilled in React, HTML, CSS, Java, PHP APIs.</li>
-              <li>Seamless UI/UX and smart integrations.</li>
-              <li>Let's start the discussion.</li>
-            </ul>
             </b>
               <br>
             </span>
           </h1>
-          <button type="button" class="rounded-pill btn-rounded">Get in Touch
+          <a href="#" style="text-decoration: none;"><button type="button" class="rounded-pill btn-rounded">Get in Touch
             <span><i class="fas fa-arrow-right"></i></span>
-          </button>
+          </button></a>
         </div>
         <script>
-          const texts = ["HR & Finance App Developer | Workday Extend & Zoho Creator", "Custom Application Developer for HR & Finance Platforms", "UI/UX Specialist & API Developer | HTML, CSS, React, Java, PHP"];
+          const texts = ["HR & Finance App Developer | Workday Extend & Zoho Creator", "Custom Application Developer | HR & Finance Platforms, Web", "UI/UX Specialist & API Developer | HTML, CSS, React, Java, PHP"];
           let index = 0;
           const textElement = document.getElementById("text");
 
@@ -117,6 +112,28 @@
     </svg>
   </section>
 
+<section id="about" class="about-section bg-light py-5">
+  <div class="container">
+    <div class="row align-items-center">
+      <!-- 2x2 HERO IMAGE GRID -->
+      <div class="col-md-6 mb-4 mb-md-0">
+         <img src="images/portfolio/portfolio-1.jpg" alt="Workday Integration" class="img-fluid rounded shadow-sm">
+      </div>
+
+      <!-- ABOUT CONTENT -->
+      <div class="col-md-6 text-start">
+        <h2 class="fw-bold mb-3">About Me</h2>
+        <p class="text-muted">
+          I'm <strong>Dinesh M</strong>, a skilled Application Developer focused on <strong>Workday Extend</strong> and <strong>React-based UI development</strong>. With a strong foundation in HR and finance tech, I build scalable, user-centric applications that improve enterprise efficiency.
+        </p>
+        <p class="text-muted">
+          I specialize in custom Workday applications, API integrations, and seamless user interfaces. Let's connect if you're looking for a developer who blends logic with clean design.
+        </p>
+        <a href="#services" class="btn btn-primary rounded-pill mt-3">Explore My Services</a>
+      </div>
+    </div>
+  </div>
+</section>
 
   <!-- //////////////////////////////////////////////////////////////////////////////////////////////
                              START SECTION 3 - THE CAMPANIES SECTION  
@@ -130,143 +147,200 @@
       </div>
     </div>
     <!-- START THE CAMPANIES CONTENT  -->
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4 col-lg-2">
-          <div class="campanies__logo-box shadow-sm">
-            <img src="images/campanies/1.png" alt="Campany 1 logo" title="Campany 1 Logo" class="img-fluid">
-          </div>
-        </div>
-        <div class="col-md-4 col-lg-2">
-          <div class="campanies__logo-box shadow-sm">
-            <img src="images/campanies/2.png" alt="Campany 2 logo" title="Campany 2 Logo" class="img-fluid">
-          </div>
-        </div>
-        <div class="col-md-4 col-lg-2">
-          <div class="campanies__logo-box shadow-sm">
-            <img src="images/campanies/3.png" alt="Campany 3 logo" title="Campany 3 Logo" class="img-fluid">
-          </div>
-        </div>
-        <div class="col-md-4 col-lg-2">
-          <div class="campanies__logo-box shadow-sm">
-            <img src="images/campanies/4.png" alt="Campany 4 logo" title="Campany 4 Logo" class="img-fluid">
-          </div>
-        </div>
-        <div class="col-md-4 col-lg-2">
-          <div class="campanies__logo-box shadow-sm">
-            <img src="images/campanies/5.png" alt="Campany 5 logo" title="Campany 5 Logo" class="img-fluid">
-          </div>
-        </div>
-        <div class="col-md-4 col-lg-2">
-          <div class="campanies__logo-box shadow-sm">
-            <img src="images/campanies/6.png" alt="Campany 6 logo" title="Campany 6 Logo" class="img-fluid">
-          </div>
-        </div>
-        
-      </div>
+   <div class="container py-5">
+  <style>
+  .logo-img {
+    height: 100%; /* You can adjust to 200px, 250px as needed */
+    object-fit: contain;
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+  }
+</style>
+
+<div class="k">
+  <!-- Add this to your <head> or style section -->
+<style>
+  .campanies__logo-box {
+    padding: 30px;
+    background-color: #fff;
+    border-radius: 12px;
+    height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .logo-img {
+    max-height: 120px;
+    width: auto;
+    object-fit: contain;
+  }
+</style>
+
+<!-- Responsive Grid Without Visible Rows -->
+<div class="container py-5">
+  <div class="d-flex flex-wrap justify-content-center gap-4">
+    <div class="campanies__logo-box shadow-sm">
+      <img src="images/campanies/1.png" alt="Company 1 logo" title="Company 1 Logo" class="logo-img">
     </div>
+    <div class="campanies__logo-box shadow-sm">
+      <img src="images/campanies/2.png" alt="Company 2 logo" title="Company 2 Logo" class="logo-img">
+    </div>
+    <div class="campanies__logo-box shadow-sm">
+      <img src="images/campanies/3.png" alt="Company 3 logo" title="Company 3 Logo" class="logo-img">
+    </div>
+    <div class="campanies__logo-box shadow-sm">
+      <img src="images/campanies/4.png" alt="Company 4 logo" title="Company 4 Logo" class="logo-img">
+    </div>
+    <div class="campanies__logo-box shadow-sm">
+      <img src="images/campanies/5.png" alt="Company 5 logo" title="Company 5 Logo" class="logo-img">
+    </div>
+    <div class="campanies__logo-box shadow-sm">
+      <img src="images/campanies/6.png" alt="Company 6 logo" title="Company 6 Logo" class="logo-img">
+    </div>
+    <div class="campanies__logo-box shadow-sm">
+      <img src="images/campanies/7.png" alt="Company 7 logo" title="Company 7 Logo" class="logo-img">
+    </div>
+    <div class="campanies__logo-box shadow-sm">
+      <img src="images/campanies/8.png" alt="Company 8 logo" title="Company 8 Logo" class="logo-img">
+    </div>
+    <div class="campanies__logo-box shadow-sm">
+      <img src="images/campanies/9.png" alt="Company 9 logo" title="Company 9 Logo" class="logo-img">
+    </div>
+    <div class="campanies__logo-box shadow-sm">
+      <img src="images/campanies/10.png" alt="Company 10 logo" title="Company 10 Logo" class="logo-img">
+    </div>
+    <div class="campanies__logo-box shadow-sm">
+      <img src="images/campanies/11.png" alt="Company 11 logo" title="Company 11 Logo" class="logo-img">
+    </div>
+    <div class="campanies__logo-box shadow-sm">
+      <img src="images/campanies/12.png" alt="Company 12 logo" title="Company 12 Logo" class="logo-img">
+    </div>
+  </div>
+</div>
+
+</div>
+
+</div>
+
   </section>
 
   <!-- //////////////////////////////////////////////////////////////////////////////////////////////
                          START SECTION 4 - THE SERVICES  
 ///////////////////////////////////////////////////////////////////////////////////////////////////-->
   <section id="services" class="services">
-    <div class="container">
-      <div class="row text-center">
-        <h1 class="display-3 fw-bold">Our Services</h1>
-        <div class="heading-line mb-1"></div>
-      </div>
-      <!-- START THE DESCRIPTION CONTENT  -->
-      <div class="row pt-2 pb-2 mt-0 mb-3">
-        <div class="col-md-6 border-right">
-          <div class="bg-white p-3">
-            <h2 class="fw-bold text-capitalize text-center">
-              Our Services Range From Initial Design To Deployment Anywhere Anytime
-            </h2>
-          </div>
+  <div class="container">
+    <div class="row text-center">
+      <h1 class="display-3 fw-bold">My Services</h1>
+      <div class="heading-line mb-1"></div>
+    </div>
+    <!-- START THE DESCRIPTION CONTENT  -->
+    <div class="row pt-2 pb-2 mt-0 mb-3">
+      <div class="col-md-6 border-right">
+        <div class="bg-white p-3">
+          <h2 class="fw-bold text-capitalize text-center">
+            From Custom Workday Solutions to Front-End Design & Deployment
+          </h2>
         </div>
-        <div class="col-md-6">
-          <div class="bg-white p-4 text-start">
-            <p class="fw-light">
-              Lorem ipsum dolor sit amet consectetur architecto magni,
-              dicta maxime laborum temporibus dolorem esse doloremque illo quas nisi enim molestias.
-              Tempore ducimus molestiae in dolore enim.
-            </p>
-          </div>
+      </div>
+      <div class="col-md-6">
+        <div class="bg-white p-4 text-start">
+          <p class="fw-light">
+            I deliver full-spectrum solutions—from back-end orchestration and Workday integrations to front-end UI/UX design using React, tailored to modern HR and finance applications.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- START THE CONTENT FOR THE SERVICES  -->
+  <div class="container">
+<!-- UI/UX Development with React -->
+    <div class="row">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-start">
+        <div class="services__pic">
+          <img src="images/services/service-2.png" alt="UI UX React illustration" class="img-fluid">
+        </div>
+      </div>
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
+        <div class="services__content">
+          <div class="icon d-block fas fa-laptop-code"></div>
+          <h3 class="display-3--title mt-1">UI/UX Development with React</h3>
+          <p class="lh-lg">
+            Build intuitive, responsive user interfaces using React.js tailored for enterprise applications. Focus on user-centered design, accessibility, and performance optimization to ensure seamless user experiences.
+          </p>
+          <button type="button" class="rounded-pill btn-rounded border-primary">Learn more
+            <span><i class="fas fa-arrow-right"></i></span>
+          </button>
+        </div>
+      </div>
+    </div>
+    <!-- Workday Extend Development -->
+    <div class="row">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
+        <div class="services__content">
+          <div class="icon d-block fas fa-cogs"></div>
+          <h3 class="display-3--title mt-1">Workday Extend Development</h3>
+          <p class="lh-lg">
+            Design and deploy custom Workday Extend applications to automate business workflows, streamline HR and finance operations, and enhance user experiences across your enterprise.
+          </p>
+          <button type="button" class="rounded-pill btn-rounded border-primary">Learn more
+            <span><i class="fas fa-arrow-right"></i></span>
+          </button>
+        </div>
+      </div>
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-end">
+        <div class="services__pic">
+          <img src="images/services/service-1.png" alt="Workday Extend illustration" class="img-fluid">
+        </div>
+      </div>
+    </div>
+    <!-- Integration & Orchestration -->
+    <div class="row">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-start">
+        <div class="services__pic">
+          <img src="images/services/service-2.png" alt="Integration illustration" class="img-fluid">
+        </div>
+      </div>
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
+        <div class="services__content">
+          <div class="icon d-block fas fa-project-diagram"></div>
+          <h3 class="display-3--title mt-1">Integration & Orchestration</h3>
+          <p class="lh-lg">
+            Expertise in Workday Web Services, PMD Scripting, and orchestration to build reliable integrations and automate multi-system business logic.
+          </p>
+          <button type="button" class="rounded-pill btn-rounded border-primary">Learn more
+            <span><i class="fas fa-arrow-right"></i></span>
+          </button>
         </div>
       </div>
     </div>
 
-    <!-- START THE CONTENT FOR THE SERVICES  -->
-    <div class="container">
-      <!-- START THE MARKETING CONTENT  -->
-      <div class="row">
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
-          <div class="services__content">
-            <div class="icon d-block fas fa-paper-plane"></div>
-            <h3 class="display-3--title mt-1">Marketing</h3>
-            <p class="lh-lg">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, impedit rem,
-              doloremque autem quibusdam blanditiis harum alias hic accusantium
-              maxime atque ratione magni repellat?
-            </p>
-            <button type="button" class="rounded-pill btn-rounded border-primary">Learn more
-              <span><i class="fas fa-arrow-right"></i></span>
-            </button>
-          </div>
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-end">
-          <div class="services__pic">
-            <img src="images/services/service-1.png" alt="marketing illustration" class="img-fluid">
-          </div>
+    <!-- QA, Documentation & Deployment -->
+    <div class="row">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
+        <div class="services__content">
+          <div class="icon d-block fas fa-check-circle"></div>
+          <h3 class="display-3--title mt-1">QA & Deployment</h3>
+          <p class="lh-lg">
+            Ensure quality assurance through rigorous testing, maintain high-standard documentation, and handle end-to-end deployment with precision and confidence.
+          </p>
+          <button type="button" class="rounded-pill btn-rounded border-primary">Learn more
+            <span><i class="fas fa-arrow-right"></i></span>
+          </button>
         </div>
       </div>
-      <!-- START THE WEB DEVELOPMENT CONTENT  -->
-      <div class="row">
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-start">
-          <div class="services__pic">
-            <img src="images/services/service-2.png" alt="web development illustration" class="img-fluid">
-          </div>
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
-          <div class="services__content">
-            <div class="icon d-block fas fa-code"></div>
-            <h3 class="display-3--title mt-1">web development</h3>
-            <p class="lh-lg">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, impedit rem,
-              doloremque autem quibusdam blanditiis harum alias hic accusantium
-              maxime atque ratione magni repellat?
-            </p>
-            <button type="button" class="rounded-pill btn-rounded border-primary">Learn more
-              <span><i class="fas fa-arrow-right"></i></span>
-            </button>
-          </div>
-        </div>
-      </div>
-      <!-- START THE CLOUD HOSTING CONTENT  -->
-      <div class="row">
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
-          <div class="services__content">
-            <div class="icon d-block fas fa-cloud-upload-alt"></div>
-            <h3 class="display-3--title mt-1">cloud hosting</h3>
-            <p class="lh-lg">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, impedit rem,
-              doloremque autem quibusdam blanditiis harum alias hic accusantium
-              maxime atque ratione magni repellat?
-            </p>
-            <button type="button" class="rounded-pill btn-rounded border-primary">Learn more
-              <span><i class="fas fa-arrow-right"></i></span>
-            </button>
-          </div>
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-end">
-          <div class="services__pic">
-            <img src="images/services/service-3.png" alt="cloud hosting illustration" class="img-fluid">
-          </div>
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-end">
+        <div class="services__pic">
+          <img src="images/services/service-3.png" alt="QA and Deployment illustration" class="img-fluid">
         </div>
       </div>
     </div>
-  </section>
+
+  </div>
+</section>
+
 
   <!-- ////////////////////////////////////////////////////////////////////////////////////////////////
                                START SECTION 5 - THE TESTIMONIALS  
