--- a/index.html
+++ b/index.html
@@ -117,7 +117,11 @@
     <div class="row align-items-center">
       <!-- 2x2 HERO IMAGE GRID -->
       <div class="col-md-6 mb-4 mb-md-0">
-         <img src="images/portfolio/portfolio-1.jpg" alt="Workday Integration" class="img-fluid rounded shadow-sm">
+        <div class="row g-2">
+          <div class="col-6">
+                     <img src="images/portfolio/hero.png" alt="Workday Integration" class="img-fluid rounded shadow-sm">
+          </div>
+        </div>
       </div>
 
       <!-- ABOUT CONTENT -->
