--- a/index.html
+++ b/index.html
@@ -85,28 +85,49 @@
                             START SECTION 2 - THE INTRO SECTION  
 /////////////////////////////////////////////////////////////////////////////////////////////////////-->
 
-  <section id="home" class="intro-section">
+  <section id="home" class="intro-section" style="padding: 5rem 0 0 0;">
     <div class="container">
       <div class="row align-items-center text-white">
         <!-- START THE CONTENT FOR THE INTRO  -->
         <div class="col-md-6 intros text-start">
           <h1 class="display-2">
-            <span class="display-2--intro">Crafting clean code</span>
+            <span class="display-2--intro">Hi, I'm Dinesh</span>
             <span class="display-2--description lh-base">
-              <h2>Dinesh M</h2>
-              <b>
+              <h6>A passionate developer crafting smart solutions with Workday Extend, React, and Java. I build scalable
+                apps that bridge UI, logic, and integration.</h6>
+              <br>
                 <div class="changing-text" id="text">
                 </div>
-              </b>
-              <br>
             </span>
           </h1>
-          <a href="#" style="text-decoration: none;"><button type="button" class="rounded-pill btn-rounded">Get in Touch
-              <span><i class="fas fa-arrow-right"></i></span>
-            </button></a>
+
+          <div class="d-flex justify-content-center gap-3 flex-wrap">
+
+            
+
+            <a href="https://www.linkedin.com/in/hasinii" target="_blank" style="text-decoration: none;">
+              <button type="button" class="rounded-pill btn-rounded border-primary">
+                Connect <span><i class="fab fa-linkedin ms-2"></i></span>
+              </button>
+            </a>
+
+            <a href="assets/Dinesh-Developer-Resume-2025.pdf" target="_blank" style="text-decoration: none;">
+              <button type="button" class="rounded-pill btn-rounded border-primary">
+                Resume <span><i class="fas fa-arrow-down ms-2"></i></span>
+              </button>
+            </a>
+
+            <a href="#contact" style="text-decoration: none;">
+              <button type="button" class="rounded-pill btn-rounded">
+                Talk Me! <span><i class="fas fa-briefcase ms-2"></i></span>
+              </button>
+            </a>
+
+          </div>
+
         </div>
         <script>
-          const texts = ["HR & Finance App Developer | Workday Extend & Zoho Creator", "Custom Application Developer | HR & Finance Platforms, Web", "UI/UX Specialist & API Developer | HTML, CSS, React, Java, PHP"];
+          const texts = ["Custom Enterprise App Development(Workday)", "Frontend UI & Integration Specialist(React)", "Multi-Stack Contributor (Java, APIs, Tools)"];
           let index = 0;
           const textElement = document.getElementById("text");
 
@@ -127,7 +148,8 @@
         <!-- START THE CONTENT FOR THE VIDEO -->
         <div class="col-md-6 intros text-end">
           <div class="video-box">
-            <img src="images/arts/intro-section-illustration.png" alt="video illutration" class="img-fluid">
+            <img src="images/arts/intro-hero.png" alt="video illutration" class="img-fluid" style="max-height: 600px;">
+          
             <a href="#" class="glightbox position-absolute top-50 start-50 translate-middle">
               <span>
                 <i class="fas fa-play-circle"></i>
@@ -911,7 +933,7 @@
 
         <div class="col-12 col-lg-6  shadow p-3" style="background: linear-gradient(180deg, #c83dff, #55aef7);">
           <!-- Contact Section -->
-          <section id="contact" class="py-5" >
+          <section id="contact" class="py-5">
             <div class="container d-flex justify-content-center align-items-center">
               <div class="contact-card p-5 rounded-4 shadow-lg bg-white bg-opacity-75"
                 style="width: fit-content; width: 100%; color: #111;">
