--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="container">
       <!-- Logo -->
       <a class="navbar-brand" href="index.html">
-        <img src="images/logo.png" alt="Dinesh" height="50">
+        <img src="images/logo.png" alt="Dinesh" class="img-fluid" style="margin-left: -15px; max-height: 35px;">
       </a>
 
       <!-- Toggler -->
@@ -70,12 +70,14 @@
         </ul>
 
         <!-- Call Button -->
-        <button type="button" class="rounded-pill btn-rounded ms-3">
+                     <a href="tel:+916382585971" class="contact-box__info--title"><button type="button" class="rounded-pill btn-rounded ms-3">
           +91 6382585971
           <span>
             <i class="fas fa-phone-alt"></i>
           </span>
-        </button>
+        </button></a>
+
+        
       </div>
     </div>
   </nav>
@@ -1166,10 +1168,10 @@ document.getElementById("modernContactForm").addEventListener("submit", async fu
 
 
   <!-- BACK TO TOP BUTTON  -->
-  <a href="#" class="shadow btn-primary rounded-circle back-to-top">
-    <i class="fas fa-chevron-up"></i>
-  </a>
-
+  
+<script>
+(function(){if(!window.chatbase||window.chatbase("getState")!=="initialized"){window.chatbase=(...arguments)=>{if(!window.chatbase.q){window.chatbase.q=[]}window.chatbase.q.push(arguments)};window.chatbase=new Proxy(window.chatbase,{get(target,prop){if(prop==="q"){return target.q}return(...args)=>target(prop,...args)}})}const onLoad=function(){const script=document.createElement("script");script.src="https://www.chatbase.co/embed.min.js";script.id="AGwHcwKVzUaaJyXBsNR2T";script.domain="www.chatbase.co";document.body.appendChild(script)};if(document.readyState==="complete"){onLoad()}else{window.addEventListener("load",onLoad)}})();
+</script>
 
 
 
