--- a/index.html
+++ b/index.html
@@ -105,23 +105,20 @@
 
           <div class="d-flex justify-content-center gap-3 flex-wrap">
 
-            
-
-            <a href="https://www.linkedin.com/in/hasinii" target="_blank" style="text-decoration: none;">
-              <button type="button" class="rounded-pill btn-rounded border-primary">
-                Connect <span><i class="fab fa-linkedin ms-2"></i></span>
-              </button>
-            </a>
-
             <a href="assets/Dinesh-Developer-Resume-2025.pdf" target="_blank" style="text-decoration: none;">
               <button type="button" class="rounded-pill btn-rounded border-primary">
                 Resume <span><i class="fas fa-arrow-down ms-2"></i></span>
               </button>
             </a>
 
+            <a href="https://www.linkedin.com/in/hasinii" target="_blank" style="text-decoration: none;">
+              <button type="button" class="rounded-pill btn-rounded border-primary">
+                Connect <span><i class="fab fa-linkedin ms-2"></i></span>
+              </button>
+            </a>
             <a href="#contact" style="text-decoration: none;">
               <button type="button" class="rounded-pill btn-rounded">
-                Talk Me! <span><i class="fas fa-briefcase ms-2"></i></span>
+                Take Me! <span><i class="fas fa-briefcase ms-2"></i></span>
               </button>
             </a>
 
