--- a/sasisite/accounting-master/contact.html
+++ b/sasisite/accounting-master/contact.html
@@ -2,7 +2,15 @@
 <html lang="en">
 
 <head>
-	<title>Accounting - Free Bootstrap 4 Template by Colorlib</title>
+	<title>Sasikumar & Associates | GST, Income Tax & Business Consultants in Mayiladuthurai</title>
+	<meta name="description"
+		content="Sasikumar & Associates offers GST Registration, Tax Filing, Company & MSME Registration, TDS, and business compliance services in Mayiladuthurai. Over 30 years of expertise.">
+	<meta name="keywords"
+		content="Sasikumar & Associates, GST Registration, Income Tax Filing, Company Registration, MSME, TDS Filing, Business Consultants, Mayiladuthurai, Tax Consultants">
+	<meta name="author" content="Sasikumar & Associates">
+	<meta name="robots" content="index, follow">
+	<link rel="canonical" href="https://www.yourdomain.com/">
+
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -281,8 +289,8 @@
 								<div class="contact-wrap w-100 p-md-5 p-4">
 									<h3 class="mb-4">Get in touch</h3>
 									<div id="form-message-warning" class="mb-4"></div>
-<!-- function of form									 -->
-									<form  id="contactForm" name="contactForm" class="contactForm"
+									<!-- function of form									 -->
+									<form id="contactForm" name="contactForm" class="contactForm"
 										action="https://formsubmit.co/contact.in.dinesh@gmail.com" method="POST">
 										<div class="row">
 											<div class="col-md-6">
@@ -294,7 +302,8 @@
 												<label class="label" for="email">Email Address</label>
 												<input type="email" class="form-control" name="email" id="email"
 													placeholder="Email" required>
-													<input type="hidden" name="_redirect" value="https://yourdomain.com/thank-you.html">
+												<input type="hidden" name="_redirect"
+													value="https://yourdomain.com/thank-you.html">
 											</div>
 											<div class="col-md-12">
 												<label class="label" for="subject">Subject</label>
